--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
         </div>
       </div>
       <div class="popular">
-        <span></span><h1>POPULAR PRODUCTS<h1><span></span>
+        <span></span><h1>POPULAR PRODUCTS</h1><span></span>
         <div class="pop_products">
           <a href="#">
             <img src="./images/pop_back.png" class="background">
             <img src="./images/increase.png" class="increase">
+            <img src="./images/star.png" class="star">
             <h1>NIKE TAILWIND LOOSE</h1>
           </a>
           <h2>RUNNING TANK TOP</h2>
@@ -94,9 +95,9 @@
           <a href="#">
             <img src="./images/pop_back.png" class="background">
             <img src="./images/increase.png" class="increase">
-            <h1>NIKE TAILWIND LOOSE</h1>
+            <h1>NIKE G-87</h1>
           </a>
-          <h2>RUNNING TANK TOP</h2>
+          <h2>TRAINING TANK TOP</h2>
           <p>Hsjkdfghlhgriuhgb dfsl sdkfhlkher jfvl  lvhsvuih eriuqg fdlvfsvblberb ldfhdbfv rlfhafvlvb dflvhhviuprhrpuigh;kjhd ldhpihb lfhvh</p>
           <span class="price">$40.99</span>
           <span class="icons">
@@ -108,9 +109,9 @@
           <a href="#">
             <img src="./images/pop_back.png" class="background">
             <img src="./images/increase.png" class="increase">
-            <h1>NIKE TAILWIND LOOSE</h1>
+            <h1>NIKE I-BEAM SWOOSH</h1>
           </a>
-          <h2>RUNNING TANK TOP</h2>
+          <h2>SPORTS TOP</h2>
           <p>Hsjkdfghlhgriuhgb dfsl sdkfhlkher jfvl  lvhsvuih eriuqg fdlvfsvblberb ldfhdbfv rlfhafvlvb dflvhhviuprhrpuigh;kjhd ldhpihb lfhvh</p>
           <span class="price">$40.99</span>
           <span class="icons">
@@ -122,9 +123,9 @@
           <a href="#">
             <img src="./images/pop_back.png" class="background">
             <img src="./images/increase.png" class="increase">
-            <h1>NIKE TAILWIND LOOSE</h1>
+            <h1>NIKE LUX</h1>
           </a>
-          <h2>RUNNING TANK TOP</h2>
+          <h2>RUNNING TOP</h2>
           <p>Hsjkdfghlhgriuhgb dfsl sdkfhlkher jfvl  lvhsvuih eriuqg fdlvfsvblberb ldfhdbfv rlfhafvlvb dflvhhviuprhrpuigh;kjhd ldhpihb lfhvh</p>
           <span class="price">$40.99</span>
           <span class="icons">
@@ -133,8 +134,111 @@
           </span>
         </div>
       </div>
+      <div class="general_info">
+        <ul>
+          <li>
+            <h1>Biruang</h1> <h1>Free PSD</h1>
+            <h2>NEQUE PORRO</h2>
+            <h2>ERIKE SUPERUS DA</h2>
+            <h2>DOLOREM IPSUM </h2>
+            <h2>GOOD LUCK</h2>
+            <a href="#" class="social facebook"></a>
+            <a href="#" class="social twitter"></a>
+            <a href="#" class="social google"></a>
+            <a href="#" class="social vimeo"></a>
+            <a href="#" class="social rss"></a>
+          </li>
+          <li class="describe">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam dictum lectus
+              sit amet varius pulvinar. Proin vitae dui tincidunt nibh facilisis pellentesque.
+              Fusce tortor turpis, facilisis ut condimentum eu, sagittis at est.</p>
+            <p>Praesent egestas posuere urna a egestas. Maecenas facilisis orci vitae ante
+              tempor accumsan. Aenean aliquam justo ac sagittis vehicula. Nam mattis
+              pretium odio sit amet vulputate.</p>
+            <p>Quisque non lobortis orci. Morbi augue mauris, ultrices at fermentum ac,
+              consequat vitae magna. Pellentesque non cursus mi, eu cursus nunc. Nullam
+              et odio tristique, volutpat urna vitae, dignissim orci. Fusce eu nulla urna.
+              This template was created by Erik Padamans.</p>
+          </li>
+          <li class="map">
+            <img src="./images/map.png">
+            <div class="location">
+              <p>Stacijas laukums 2, Riga</p>
+              <img src="./images/local.png">
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="sign_up">
+      <div class="wrapper">
+        <h1>SIGN UP FROM EXCLUSIVE SALES AND PRODUCT NEWS</h1>
+        <input type="text" placeholder="KUTAS99@LOCH.COM">
+        <input type="submit" value="SIGN UP">
+      </div>
     </div>
   </div>
-  <div class="footer"></div>
+  <div class="footer">
+    <div class="wrapper">
+      <ul>
+        <li>
+          <h1>OUR STORES</h1>
+          <p>Feel free to visit our stores or contact us.<br/>
+            1401 South Grand Avenue<br/>
+            Los Angeles, CA 90015<br/>
+            (213) 748-2411</p>
+          <p>100 Fairview Drive<br/>
+            Franklin, VA 23851<br/>
+            (757) 569-6100</p>
+          <img src="./images/social.png">
+        </li>
+        <li class="blog_posts">
+          <h1>BLOG POSTS</h1>
+          <a href="#">Justin Bieber confirmed that he is gay.</a>
+          <p>Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Donec sed auctor elit.</p>
+          <a href="#">New sexy sport clothes are here!</a>
+          <p>Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Donec sed auctor elit.</p>
+          <a href="#">Summer sales are coming!</a>
+          <p>Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Donec sed auctor elit. </p>
+        </li>
+        <li class="support">
+          <h1>SUPPORT</h1>
+          <ul>
+            <li><a href="#">Terms & Conditions</a></li><br/>
+            <li><a href="#">FAQ</a></li><br/>
+            <li><a href="#">Payment</a></li><br/>
+            <li><a href="#">Refunds</a></li><br/>
+            <li><a href="#">Track Order</a></li><br/>
+            <li><a href="#">Services</a></li><br/>
+            <li><a href="#">Privacy & Security</a></li><br/>
+            <li><a href="#">Careers</a></li><br/>
+            <li><a href="#">Press</a></li><br/>
+            <li><a href="#">Corporate Information</a></li><br/>
+          </ul>
+          <ul>
+            <li><a href="#">Payment</a></li><br/>
+            <li><a href="#">Refunds</a></li><br/>
+            <li><a href="#">Track Order</a></li><br/>
+            <li><a href="#">Services</a></li><br/>
+            <li><a href="#">Affiliates</a></li><br/>
+            <li><a href="#">Careers</a></li><br/>
+            <li><a href="#">Press</a></li><br/>
+            <li><a href="#">Sign Up & Save</a></li><br/>
+          </ul>
+        </li>
+        <li class="contact">
+          <h1>CONTACT US</h1>
+          <form>
+            <input type="text" placeholder="YOUR E-MAIL...">
+            <textarea rows="4" placeholder="YOUR TEXT..."></textarea>
+            <input type="submit" value="SEND">
+          </form>
+        </li>
+      </ul>
+    </div>
+  </div>
 </body>
 </html>
