--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Biruang</title>
   <link href = "./css/style.css" type = "text/css" rel = "stylesheet">
+  <link href = "./fonts/css/font-awesome.min.css" rel = "stylesheet">
 </head>
 <body>
   <div class="header">
@@ -142,11 +143,11 @@
             <h2>ERIKE SUPERUS DA</h2>
             <h2>DOLOREM IPSUM </h2>
             <h2>GOOD LUCK</h2>
-            <a href="#" class="social facebook"></a>
-            <a href="#" class="social twitter"></a>
-            <a href="#" class="social google"></a>
-            <a href="#" class="social vimeo"></a>
-            <a href="#" class="social rss"></a>
+            <a href="#" class="fa fa-facebook fa-lg" aria-hidden="true"></a>
+            <a href="#" class="fa fa-twitter fa-lg" aria-hidden="true"></a>
+            <a href="#" class="fa fa-google-plus fa-lg" aria-hidden="true"></a>
+            <a href="#" class="fa fa-vimeo fa-lg" aria-hidden="true"></a>
+            <a href="#" class="fa fa-rss fa-lg" aria-hidden="true"></a>
           </li>
           <li class="describe">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam dictum lectus
@@ -190,7 +191,11 @@
           <p>100 Fairview Drive<br/>
             Franklin, VA 23851<br/>
             (757) 569-6100</p>
-          <img src="./images/social.png">
+            <a href="#" class="fa fa-facebook fa-lg" aria-hidden="true"></a>
+            <a href="#" class="fa fa-twitter fa-lg" aria-hidden="true"></a>
+            <a href="#" class="fa fa-google-plus fa-lg" aria-hidden="true"></a>
+            <a href="#" class="fa fa-vimeo fa-lg" aria-hidden="true"></a>
+            <a href="#" class="fa fa-rss fa-lg" aria-hidden="true"></a>
         </li>
         <li class="blog_posts">
           <h1>BLOG POSTS</h1>
