--- a/index.html
+++ b/index.html
@@ -78,10 +78,18 @@
       <div class="popular">
         <span></span><h1>POPULAR PRODUCTS</h1><span></span>
         <div class="pop_products">
+          <div>
+            <ul class="star-line">
+              <li class="current" style="width: 10%;"><span class="star1"></span></li>
+              <li><span class="star2"></span></li>
+              <li><span class="star3"></span></li>
+              <li><span class="star4"></span></li>
+              <li><span class="star5"></span></li>
+            </ul>
+          </div>
           <a href="#">
             <img src="./images/pop_back.png" class="background">
             <img src="./images/increase.png" class="increase">
-            <img src="./images/star.png" class="star">
             <h1>NIKE TAILWIND LOOSE</h1>
           </a>
           <h2>RUNNING TANK TOP</h2>
