--- a/index.html
+++ b/index.html
@@ -49,7 +49,24 @@
       </ul>
     </div>
   </div>
-  <div class="slider"></div>
+  <div class="slider">
+    <div class="wrapper">
+      <div class="text">
+        <h1>RIGHT IS PINK.</h1>
+        <h1>LEFT IS BLUE</h1>
+        <p>Inspired by Brasil’s bold colors and matching up to football’s on-pitch
+           playmakers, these kicks are ready to stand out</p>
+        <input type="button" value="BRASIL SHOP">
+      </div>
+    </div>
+    <ul class="slide_dott">
+      <li><span class="slide_current"></span></li>
+      <li><span></span></li>
+      <li><span></span></li>
+      <li><span></span></li>
+      <li><span></span></li>
+    </ul>
+  </div>
   <div class="content">
     <div class="wrapper">
       <div>
@@ -171,6 +188,8 @@
           </li>
           <li class="map">
             <img src="./images/map.png">
+            <span class="plus"><p>+</p></span>
+            <span class="minus">_</span>
             <div class="location">
               <p>Stacijas laukums 2, Riga</p>
               <img src="./images/local.png">
