--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
         </div>
       </div>
       <div class="popular">
-        <span></span><h1>POPULAR PRODUCTS</h1><span></span>
+        <span class="line"></span><h1>POPULAR PRODUCTS</h1><span class="line"></span>
+        <span class="arrow left"> < </span>
+        <span class="arrow right"> > </span>
         <div class="pop_products">
           <div>
             <ul class="star-line">
